--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next": "^12.0.1",
     "next-auth": "4.0.0-beta.2",
     "next-contentlayer": "^0.0.27",
+    "next-plausible": "^3.0.1",
     "next-themes": "0.0.15",
     "preact": "10.5.15",
     "react": "17.0.2",
