Add latex resume

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,23 @@ public/feed.xml
 
 # Contentlayer
 .contentlayer
+
+# latex
+### TeX ###
+## Core latex/pdflatex auxiliary files:
+*.aux
+*.lof
+*.log
+*.lot
+*.fls
+*.out
+*.toc
+
+## Intermediate documents:
+*.dvi
+*-converted-to.*
+
+### Editor ###
+## Vim & Emacs temp files:
+.*sw[op]
+*~
