--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-rough-notation": "^1.0.1",
+    "sunrise-sunset-js": "^2.2.1",
     "swr": "1.0.1",
     "tailwindcss": "2.2.17",
     "unsplash-js": "6.3.0",
