--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^1.4.2",
     "@prisma/client": "^3.3.0",
     "@tailwindcss/typography": "0.4.1",
+    "@types/sunrise-sunset-js": "^2.0.0",
     "big.js": "6.1.1",
     "clsx": "^1.1.1",
     "contentlayer": "^0.0.26",
